<resources>
    <string name="app_name">PathLight</string>
    <string name="intro_desc">Explore most exciting jobs or professional workers\n based on your interest</string>
    <string name="btn_create_acc">Create an account</string>
    <string name="btn_create_acc2">New to PathLight? Register here</string>
    <string name="intro_title">Discover your\ndream job here</string>
    <string name="text_login">Login</string>
    <string name="input_email">Email ID</string>
    <string name="input_pwd">Password</string>
    <string name="text_forgot_password">Forgot Password ?</string>
    <string name="text_login_as_employer">Login as Employer</string>
    <string name="title_home">Home</string>
    <string name="title_applications">Applications</string>
    <string name="title_profile">Profile</string>
</resources>